* Mon Apr 17 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.0.3-0
- Updated polkit setting to use the new defined type from the polkit module
- Added polkit dependency
- `dconf update` execs now catch failures

* Mon Mar 15 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.2-0
- Fixed packages lists
- Fixed screensaver logic
- gconf type was not getting values correctly

* Tue Feb 21 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.0.1-0
- Added check for gdm_version before it's used

* Tue Dec 13 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Added strong typing of parameters

* Thu Dec 01 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Renamed module from 'windowmanager' to 'gnome'

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Mon Nov 21 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 4.1.4-0
- Include gconf type removed from xwindows project.

* Thu Jul 28 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.2-0
- Corrected the scope include syntax

* Tue Jun 7 2016 Ralph Wright <rwright@onyxpoint.com> - 4.1.1-0
- Added dconf support
- Added security settings using dconf

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-3
- Added compliance function support

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Changed puppet-server requirement to puppet

* Tue Sep 30 2014 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-1
- Updated for RHEL7

* Thu Mar 20 2014 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-0
- Updated for puppet3/hiera and added rspec tests

* Wed Oct 02 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.0.0-6
- Use 'versioncmp' for all version comparisons.

* Fri May 03 2013 Nick Markowski <nmarkowski@keywcorp.com>
4.0.0-5
- Added pupmod-mozilla as a dependency

* Tue Dec 11 2012 Maintenance
4.0.0-4